terraform/network.tf
# Create the VPC
resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"
    enable_dns_hostnames = true # Allows EC2 instances to have hostnames AND IP address
    enable_dns_support = true # EC2 instances can resolve domain names to 
    tags = {
        Name = "${var.domain_name}-vpc"
    }
}

# Create the internet gateway
resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id

    tags = {
        Name = "${var.domain_name}-igw"
    }
}

# Create the public subnet
resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "${var.aws_region}a"
    map_public_ip_on_launch = true
    
    tags = {
        Name = "${var.domain_name}-public-subnet"
    }
}

# Create the route table
resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }

    tags = {
      Name = "${var.domain_name}-public-rt"
    }
}

# Apply routing rules to public subnet
resource "aws_route_table_association" "public" {
    subnet_id = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
}
